--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
 .weather-app {
   max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+
+h1 {
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
 }
