--- a/src/style.css
+++ b/src/style.css
@@ -11,4 +11,22 @@ h1 {
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
+  margin-bottom: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  color: rgb (135, 135, 135);
+  display: block;
+  font-family: Arial, sans-serif;
+  font: size 16px;
+  font-weight: 100;
+  height: 18.8889px;
+  line-height: 19.2px;
+  text-align: left;
 }
