--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,22 @@
   border-radius: 5px;
 }
 
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
+
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+}
+
+.weather-temperature .active :hover {
+  text-decoration: none;
+}
+
 h1 {
   color: #878787;
   font-size: 24px;
@@ -24,12 +40,12 @@ li {
   color: rgb (135, 135, 135);
   display: block;
   font-family: Arial, sans-serif;
-  font: size 16px;
+  font-size: 16px;
   font-weight: 100;
   height: 18.8889px;
-  line-height: 19.2px;
-  text-align: left;
+  line-height: 19px;
 }
+
 li::first-letter {
   text-transform: capitalize;
 }
