added a calligraphy font :smile:

--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,6 @@
   max-width: 600px;
   margin: 30px auto;
   padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
 }
 
 .weather-temperature strong {
@@ -41,6 +39,32 @@
   color: #bababa;
 }
 
+body {
+  overflow: hidden;
+  background: radial-gradient(
+    circle at 0.2% 0.5%,
+    rgb(252, 165, 241) 0%,
+    rgb(181, 255, 255) 100.2%
+  );
+  background-size: cover;
+  padding-top: 10px;
+  padding-bottom: 65.89%;
+  height: 0;
+  text-align: center;
+  font-family: "Dancing Script", cursive;
+}
+
+.weather-app-wrapper {
+  content: "";
+  background: #fff;
+  border-radius: 20px;
+  border: 0px;
+}
+
+form {
+  text-align: center;
+  border-radius: 20px;
+}
 h1 {
   color: #878787;
   font-size: 24px;
