--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@
 
 .wearther-forecast-date {
   font-size: 16px;
-  color: #bababa;
+  color: #000;
   opacity: 0.5;
 }
 
@@ -36,15 +36,14 @@
 }
 .wearther-forecast-temperatures {
   font-size: 13px;
-  color: #bababa;
 }
 
 body {
   overflow: hidden;
   background: radial-gradient(
-    circle at 0.2% 0.5%,
-    rgb(252, 165, 241) 0%,
-    rgb(181, 255, 255) 100.2%
+    circle at 10% 20%,
+    rgb(255, 143, 143) 0%,
+    rgb(255, 248, 182) 100.3%
   );
   background-size: cover;
   padding-top: 10px;
@@ -59,6 +58,11 @@ body {
   background: #fff;
   border-radius: 20px;
   border: 0px;
+  font-family: "Dancing Script", cursive;
+}
+
+.city {
+  font-size: 40px;
 }
 
 form {
@@ -66,11 +70,12 @@ form {
   border-radius: 20px;
 }
 h1 {
-  color: #878787;
-  font-size: 24px;
+  color: #ff9993;
+  font-size: 30px;
   font-weight: 100;
   line-height: 28px;
   margin-bottom: 0;
+  font-family: "Dancing Script", cursive;
 }
 
 ul {
@@ -80,13 +85,13 @@ ul {
 
 li {
   list-style: none;
-  color: rgb(135, 135, 135);
   display: block;
   font-family: Arial, sans-serif;
   font-size: 16px;
   font-weight: 100;
   height: 18.8889px;
   line-height: 19px;
+  font-family: "Dancing Script", cursive;
 }
 
 li::first-letter {
@@ -99,4 +104,6 @@ li::first-letter {
 
 footer {
   text-align: center;
+  font-size: 20px;
+  font-weight: 100;
 }
