--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,7 @@ form {
   border-radius: 20px;
 }
 h1 {
-  color: #ff9993;
+  color: #f57b75;
   font-size: 30px;
   font-weight: 100;
   line-height: 28px;
@@ -104,8 +104,9 @@ li::first-letter {
 
 footer {
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 100;
+  color: rgb(4, 38, 90);
 }
 .search {
   cursor: pointer;
